# cpp_examples

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: build.Linux.yml  build.Windows.yml  build.macOS.yml
example/: common.hpp
example/algorithm/: Dijkstra.cpp  EOR1MP.cpp  Floyd.cpp  Graph.hpp  Hungarian.cpp  Kruskal.cpp  Prim.cpp  SPFA.cpp  a_star.cpp  merge_sort.cpp  quick_sort.cpp  topological_sort.cpp
example/armadillo/: shared_memory.cpp
example/autodiff/: Adept.cpp  Adept_valarray.cpp  forward_with_dual.cpp
example/data_structure/: binary_indexed_tree.cpp  disjoint_sets.cpp  mutable_priority_queue.cpp  priority_queue.cpp  segment_tree.cpp  sparse_table.cpp  trie.cpp
example/design_pattern/PImpl/: PImpl.cpp  Widget.cpp
example/design_pattern/pimpl/: Widget.cpp  Widget.hpp  pimpl.cpp
example/design_pattern/plugin/: B.hpp  D.cpp  plugin.cpp
example/feature/: arithmetic.cpp  class_size.cpp  comma_operator.cpp  data_member_offset.cpp  float_half_conversion.cpp  infinite_nan.cpp  initializer_list.cpp  iterator.cpp  list_initialization.cpp  new_delete.cpp  virtual_base_class.cpp  virtual_function.cpp
example/functional_programming/: currying.cpp  lazy_evaluation.cpp  lazy_string_concatenation.cpp  maybe_monad.cpp  ranges.cpp  recursive_memoization.cpp  sum_type_for_state.cpp
example/functional_programming/actor_with_reactive_stream/: actor_with_reactive_stream.cpp  actor_with_reactive_stream_test.cpp  actor_with_reactive_stream_test.sh  expected.h  expected.hpp  filter.h  filter.hpp  join.h  join.hpp  mtry.h  mtry.hpp  service.h  service.hpp  service_test.h  service_test.hpp  sink.h  sink.hpp  transform.h  transform.hpp  trim.h  trim.hpp  values.h  values.hpp
example/google_test/: mock.cpp
example/linear_algebra/: EOR1MP.cpp  matrix_multiplication.cpp
example/metaprogramming/: CRTP.cpp  VarTypeDict.cpp  binary.cpp  has_type_.cpp  measurement_unit.cpp  nested_constructor.cpp  short-circuit.cpp  short_circuit.cpp  sizes_of.cpp
example/metaprogramming/dsl/: dsl.cpp  dsl.h  dsl.hpp  person.h  person.hpp  vehicle.h  vehicle.hpp
example/metaprogramming/policy/: policy.cpp  policy_container.hpp  policy_macro_begin.hpp  policy_macro_end.hpp  policy_selector.hpp  traits.hpp
example/simd/: float_array_multiplication.cpp
example/standard_library/: array_compare.cpp  memory_resource_is_equal.cpp  nextafter.cpp  regex.cpp  stringstream_eof.cpp  valarray.cpp  wide_character.cpp
examples/: comma_operator.cpp  common.hpp
examples/algorithms/: binary_indexed_tree.cpp  priority_queue.cpp  quick_sort.cpp  trie.cpp
examples/design_pattern/pimpl/: Widget.cpp  Widget.hpp  pimpl.cpp
examples/features/: infinite_nan.cpp  iterator.cpp  list_initialization.cpp
examples/functional_programming/: maybe_monad.cpp
examples/metaprogramming/: VarTypeDict.cpp  binary.cpp  has_type_.cpp  short-circuit.cpp  sizes_of.cpp
examples/plugin/: B.hpp  D.cpp  plugin.cpp
